--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,10 @@
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
+$color-default-blue:               #102654;
+$color-default-white:              #ffffff;
+$color-default-accent:             #103AAE;
+$color-additional-gradient:        linear-gradient(128deg, #D10A42 0%, #0041CA 45.58%);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
