--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,8 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/sitemap";
+@import "blocks/main-header";
+@import "blocks/hero";
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
