--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,10 +6,11 @@
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
+
 $color-default-blue:               #102654;
 $color-default-white:              #ffffff;
 $color-default-accent:             #103AAE;
-$color-additional-gradient:        linear-gradient(128deg, #D10A42 0%, #0041CA 45.58%);
+$color-additional-gradient:        linear-gradient(#003D85, #B80027);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
@@ -18,8 +19,9 @@ $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
 
 // Gradient
-
-$black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$color-text-gradient:        linear-gradient(#003D85, #B80027);
+$color-background-gradient:  linear-gradient(90deg, #1C3477 0%, #1C3477 0.01%, #1A3578 39.11%, #73184B 75.5%, #B4022A 100%);
+$black-to-right:             linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
 
 // Typography
 // ---------------------------------
