--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background: $color-background-gradient;
   min-height: 86px;
+  margin: o auto;
   }
 
   .main-header__logo {
