Добавляет разметку стилизацию about

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/sitemap";
 @import "blocks/main-header";
 @import "blocks/hero";
+@import "blocks/about";
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
