--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -22,7 +22,7 @@
 
   .hero__city {
     margin: 0;
-    color: #FFF;
+    color: $color-default-white;
     text-align: right;
     font-family: "Alumni Sans Semi";
     font-size: 42px;
@@ -35,7 +35,7 @@
   .hero__name {
     margin-top: 10px;
     margin-bottom: 0;
-    color: #FFF;
+    color: $color-default-white;
     text-align: right;
     font-family: "Alumni Sans Extra";
     font-size: 72px;
