Добавлена секция price

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,4 +1,5 @@
 .about {
+  position: relative;
   margin: 0 auto;
   background: $color-default-white;
   width: 1366px;
@@ -55,12 +56,8 @@
     padding-bottom: 240px;
   }
 
-  .about_img {
-    position: relative;
-  }
-
 .about__video {
   position: absolute;
-  bottom: -50%;
-  right: 40%;
+  top: 50%;
+  right: 35%;
 }
