--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,6 +10,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 $color-default-blue:               #102654;
 $color-default-white:              #ffffff;
 $color-default-accent:             #103AAE;
+$color-additional-white:           #F8F9FC;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
