Стилизация price кроме JS и hover кнопки Купить

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,7 @@ $color-torch-red:                   #ff1553;
 $color-text-gradient:        linear-gradient(#003D85, #B80027);
 $color-background-gradient:  linear-gradient(90deg, #1C3477 0%, #1C3477 0.01%, #1A3578 39.11%, #73184B 75.5%, #B4022A 100%);
 $black-to-right:             linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$color-focus-gradient:       linear-gradient(to right,rgba(209, 10, 66, 1),rgba(0, 53, 159, 1))1;
 
 // Typography
 // ---------------------------------
