--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -13,7 +13,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 12px; /* 100% */
+  line-height: 12px;
   letter-spacing: 0.6px;
   text-transform: uppercase;
   transition: opacity $trans-default;
