--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,9 +1,195 @@
 .price{
+  position: relative;
   margin: 0 auto;
   background: $color-additional-white;
   width: 1366px;
   padding-left: 103px;
   padding-right: 103px;
   padding-top: 120px;
+  z-index: 1;
 }
+
+.price__name {
+  color: $color-default-blue;
+  font-family: "Alumni Sans Semi";
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 54px;
+  letter-spacing: 1.62px;
+  text-align: center;
+  margin: 0;
+  padding-bottom: 38px;
+}
+
+.price__button-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  position: relative;
+  padding-bottom: 50px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 30px;
+    width: 100%;
+    height: 2px;
+    background-color: rgba(120, 120, 120, 0.20);
+    width: 380px;
+  }
+}
+
+.price__button {
+  font-family: "Roboto Condensed";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  background-color: inherit;
+  border: none;
+  color: rgba(16, 38, 84, 0.50);
+  cursor: pointer;
+  outline: none;
+  padding-bottom: 10px;
+
+  @include active {
+    color: $color-default-blue;
+  }
+  @include hover-focus {
+    color: $color-default-blue;
+    color: $color-default-blue;
+    padding-bottom: 8px;
+    border-bottom: 2px solid #D10A42;
+  }
+  @include focus {
+    color: $color-default-blue;
+  }
+}
+
+.price__button--active {
+    color: $color-default-blue;
+    color: $color-default-blue;
+    padding-bottom: 8px;
+    border-bottom: 2px solid #D10A42;
+}
+
+.price__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding-bottom: 120px;
+  margin: 0;
+}
+
+.price__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 360px;
+  min-height: 441px;
+  border: 7px solid $color-default-white;
+  background-color: $color-default-white;
+  padding-top: 65px;
+  padding-bottom: 65px;
+
+  @include active {
+    border: 7px solid;
+    border-image: $color-focus-gradient;
+  }
+  @include hover-focus {
+    border: 7px solid;
+    border-image: $color-focus-gradient;
+  }
+  @include focus {
+    border: 7px solid;
+    border-image: $color-focus-gradient;
+  }
+}
+
+.price__item--active {
+  border: 7px solid;
+  border-image: $color-focus-gradient;
+}
+
+.price__header {
+  color: $color-default-blue;
+  text-align: center;
+  font-family: "Roboto Condensed";
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  margin: 0;
+}
+
+.price__info {
+  padding-top: 11px;
+  margin: 0;
+  color: $color-default-blue;
+  font-family: "Roboto Condensed";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+}
+
+.price__amount {
+  position: relative;
+  padding-top: 66px;
+  padding-bottom: 35px;
+  color: $color-default-accent;
+  font-family: "Roboto Condensed";
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  z-index: 2;
+
+  &[data-price]::before {
+    content: attr(data-price);
+    position: absolute;
+    color: #E8E8E8;
+    opacity: 0.48;
+    font-family: "Roboto Condensed";
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    top: 15px;
+    right: -24px;
+    z-index: -1;
+  }
+}
+
+.price__buy {
+  display: inline-flex;
+  padding: 27px 44px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: 2px solid $color-default-blue;
+  color: $color-default-blue;
+  font-family: "Roboto Condensed";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 12px;
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+
+  @include hover-focus {
+    color: $color-default-white;
+    border: 2px solid $color-focus-gradient;
+    border-image: $color-focus-gradient;
+    background-color: $color-focus-gradient;
+  }
+}
+
+.price__img {
+  position: absolute;
+  bottom: -190px;
+  right: 0;
+  z-index: -1;
 }
