--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -16,8 +16,16 @@
 
 @font-face {
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   font-family: "Roboto Condensed";
   font-display: swap;
   src: url("../fonts/roboto-condensed.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "Roboto Condensed";
+  font-display: swap;
+  src: url("../fonts/roboto-condensedBold.woff2") format("woff2");
 }
