Добавлена секиця Games

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,8 @@
 @import "blocks/hero";
 @import "blocks/about";
 @import "blocks/price";
+@import "blocks/games";
+
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
