--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/swiper";
 // Swiper 8.4.7
 // @import "vendor/swiper";
 
@@ -28,6 +29,7 @@
 @import "blocks/about";
 @import "blocks/price";
 @import "blocks/games";
+@import "blocks/judges";
 
 // ---------------------------------
 
