--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,7 +29,7 @@
 @import "blocks/about";
 @import "blocks/price";
 @import "blocks/games";
-@import "blocks/judges";
+@import "blocks/jury";
 
 // ---------------------------------
 
