--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/price";
 @import "blocks/games";
 @import "blocks/jury";
+@import "blocks/features";
 
 // ---------------------------------
 
