--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -23,6 +23,9 @@ $color-text-gradient:        linear-gradient(#003D85, #B80027);
 $color-background-gradient:  linear-gradient(90deg, #1C3477 0%, #1C3477 0.01%, #1A3578 39.11%, #73184B 75.5%, #B4022A 100%);
 $black-to-right:             linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
 $color-focus-gradient:       linear-gradient(to right,rgba(209, 10, 66, 1),rgba(0, 53, 159, 1))1;
+$color-number-gradient:      linear-gradient(128deg, #D10A42 0%, #0041CA 45.58%);
+$color-number2-gradient:     linear-gradient(142deg, #D10A42 0%, #0041CA 88.2%);
+$color-number3-gradient:     linear-gradient(143deg, #D10A42 0%, #0041CA 87.33%);
 
 // Typography
 // ---------------------------------
