--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,7 @@
 @import "blocks/games";
 @import "blocks/jury";
 @import "blocks/features";
+@import "blocks/offers";
 
 // ---------------------------------
 
