--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/jury";
 @import "blocks/features";
 @import "blocks/offers";
+@import "blocks/faq";
 
 // ---------------------------------
 
