--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/features";
 @import "blocks/offers";
 @import "blocks/faq";
+@import "blocks/reviews";
 
 // ---------------------------------
 
