Добвены footer contacts

--- a/source/sass/blocks/jury.scss
+++ b/source/sass/blocks/jury.scss
@@ -20,7 +20,7 @@
   padding-bottom: 48px;
 }
 
-.swiper___wrapper {
+.jury__wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
