--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,8 @@
 @import "blocks/offers";
 @import "blocks/faq";
 @import "blocks/reviews";
+@import "blocks/form";
+@import "blocks/main-footer";
 
 // ---------------------------------
 
